--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
-    "fastapi>=0.115.12",
+    "fastapi[standard]>=0.115.12",
+    "supabase>=2.15.2",
     "uvicorn>=0.34.3",
 ]
